# gdg_ai_2025

./: .gitignore  README.md  note.md
agents/: graph.py  pyproject.toml
agents/Knowledge_map_agent/: agent.py  df_capitoli.pkl  schema.py  tools.py
agents/prequisite_agent/: agent.py
frontend/: index.js  package.json
frontend/public/: index.html
frontend/src/: dashboard.js
gdg_ai_2025_ErTucano/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
gdg_ai_2025_ErTucano/src/: App.tsx  index.css
gdg_ai_2025_ErTucano/src/components/common/: Badge.tsx  CardContainer.tsx  IconButton.tsx  ProgressBar.tsx
gdg_ai_2025_ErTucano/src/components/dashboard/: Dashboard.tsx  SubjectCard.tsx
gdg_ai_2025_ErTucano/src/components/layout/: Header.tsx  MainContent.tsx  Sidebar.tsx
gdg_ai_2025_ErTucano/src/components/subject/: BattleMode.tsx  GraphView.tsx  MaterialItem.tsx  MaterialView.tsx  MaterialViewer.tsx  SubjectWorkspace.tsx  TabNavigation.tsx
gdg_ai_2025_ErTucano/src/context/: AppContext.tsx
gdg_ai_2025_ErTucano/src/data/: mockData.ts
gdg_ai_2025_ErTucano/src/types/: index.ts
react_frontend/: index.html  package-lock.json  package.json  tailwind.config.js
react_frontend/src/: App.tsx  index.css
react_frontend/src/components/common/: Badge.tsx  CardContainer.tsx  IconButton.tsx  ProgressBar.tsx
react_frontend/src/context/: AppContext.tsx
react_frontend/src/data/: mockData.ts
react_frontend/src/types/: index.ts
src/components/subject/: MaterialItem.tsx  MaterialView.tsx  MaterialViewer.tsx
(+15 files in other folders)
