[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bertopic>=0.17.0",
    "google-adk>=0.5.0",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "pdfplumber>=0.11.6",
    "ruff>=0.11.9",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.5",
    "streamlit>=1.45.0",
    "transformers>=4.51.3",
]
